--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,7 @@
   "name": "papaseguro",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.2.0",
-    "font-awesome": "~4.3.0"
+    "bootstrap": "~3.2.0"
   },
   "devDependencies": {
     "chai": "~3.0.0",
